
heatmaply 1.1.1 (2020-08-19)
===============
## BUGFIX
- Cellnote did not work when using point size mapping.
- `point_size_mat` did not work when `plot_method="plotly"`
- RowSideColors/ColSideColors used default colour mapping
- showticklabels did not function as expected for ggheatmap.
- showticklabels did not function as expected when of length 1.

heatmaply 1.1.0 (2020-03-27)
===============

## NEW FEATURE
* heatmaply
  - Add dendrogram_layers argument to allow users to arbitrarily customise
    dendrograms using ggplot2 themes/scales etc before conversion to plotly
    objects.
  - Add colorbar_thickness argument to control colorbar width/thickness.
    Only effective when plot_method="plotly"

## BUGFIX
- heatmaply
  - Correctly hide dendrogram axes when plot_method="plotly"
- Make behaviour match docs for custom_hovertext when plot_method="plotly" (#231)

### OTHER NOTES
- Improve the README with link to stackoverflow.
- Updated pkgdown


heatmaply 1.0.0 (2019-12-05)
===============

## NEW FEATURES
* heatmaply
  - The argument show_dendrogram controls whether to display the row and
    column dendrograms. This allows the user to display a clustered heatmap
    without displaying the dendrograms used to cluster the data.
  - Setting hclust_method=NA uses dendextend::find_dend to find the "optimal"
    dendrogram. For details see `?find_dend`
  - Updated the vignettes with better code examples, larger figure sizes,
    and new features.
  - Add the sidecolor_colorbar_len argument to control the size of the side
    color plot legend when `plot_method = "plotly"`

## BUGFIXES
* heatmaply
  - Legends are no longer shown for the row/column dendrogram traces when
    plot_method = "ggplot".
  - cellnote would be placed outwith the heatmap when plot_method = "ggplot"
  - showticklabels applies when row_dend_left=TRUE and plot_method="plotly"
  - fontsize_row and fontsize_col apply to side colour plots as well
    as the main plot axes.