@@ -7,6 +7,7 @@ heatmaply 1.1.1 (2020-08-19)
 - RowSideColors/ColSideColors used default colour mapping
 - showticklabels did not function as expected for ggheatmap.
 - showticklabels did not function as expected when of length 1.
+- Remove "\link[d3heatmap]{d3heatmap}" from .Rd since d3heatmap was removed from CRAN
 
 heatmaply 1.1.0 (2020-03-27)
 ===============
